2010-08-21  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-choices-buffer): XEmacs compatibility.

2010-08-21  Helmut Eller  <heller@common-lisp.net>

	* slime-repl.el: Specify :on-unload action.

2010-08-21  Anton Kovalenko <anton@sw4me.com>

	Add support to save snapshots in backround.

	* swank-snapshot.lisp (background-save-snapshot): New.
	(resurrect): Initialize repl streams.
	* slime-snapshot.el (slime-snapshot): With prefix-arg perform
	saving in background.  Also ask before overwriting existing files.

2010-08-13  Helmut Eller  <heller@common-lisp.net>

	Fix slime-restore.

	* swank-snapshot.lisp (swank-snapshot::resurrect): Adapted to
	new MAKE-CONNECTION.

2010-07-29  Stas Boukarev  <stassats@gmail.com>

	* slime-c-p-c.el (slime-complete-form): Limit `looking-back' too.

2010-07-28  Stas Boukarev  <stassats@gmail.com>

	* slime-presentations.el (slime-copy-presentation-to-repl): Limit
	looking-back to one character before point. Solves long freeze on a
	large buffer.

2010-07-27  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-start): change defun to defun*,
	elisp doesn't understand default values for &optional.

2010-07-24  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-frob-defpackage-form): Accept a
	symbol or a list of symbols. Optimize inserting several symbols at
	a time.
	(slime-search-exports-in-defpackage): Search forward until nothing
	is found, otherwise it searching for FOO will stop after encountering
	FOO-B.
	(slime-export-class): Rename from slime-export-structure.

	* swank-package-fu.lisp (export-symbol-for-emacs): Fix typo.
	(export-structure): Add support for CCL and for exporting
	standard-class accessors using MOP.

	* slime-sprof.el (slime-sprof-start-alloc)
	(slime-sprof-start-time): New functions to start profiling in
	:alloc and :time mode. The default slime-sprof-start is :cpu.
	* swank-sprof.lisp (swank-sprof-start): Accept :mode keyword.
